CHANGELOG/v1.3.2-alpha.6/CHANGELOG.md
> [!caution]
>
> # 警告！当前版本为 Alpha 版本，请勿在生产环境使用
>
> **⚠️ 警告**：当前版本为 **Alpha 版本**，**请勿在生产环境使用**。功能已移植完成。当前版本可能存在未知Bug，仅供用户体验。使用中如遇问题，欢迎前往 GitHub Issues 或 QQ 频道 反馈！

v2.0 - Koharu（小鸟游星野） Alpha 6

## 🚀 主要更新

- 新增 **闪抽点击后禁用功能**，新增**点击后禁用时间设置**，支持设置**0-60s**的禁用时间，防止频繁点击
- 新增 **通知窗口字体设置**，新增通知窗口支持独立的字体设置功能
- 新增 **自动保存窗口大小设置**，新增设置是否自动保存窗口大小功能
- 新增 **预览设置开关**，在**安全设置页面**新增控制是否在打开设置的验证过程中显示预览按钮的功能
- 新增 **安全验证窗口参数传递机制**，通过修改 **PageTemplate** 和 **SimpleWindowTemplate** 类，支持向页面组件传递额外参数
- 新增 **ClassIsland数据接收功能**，实现接收ClassIsland软件发送的JSON格式课程表数据，包含当前科目、下一节课、当前状态等信息
- 新增 **IPC端口配置功能**，在基本设置页面添加端口设置选项，支持1-65535范围内的端口自定义
- 新增 **C# IPC通信示例**，提供ClassIsland软件通过TCP Socket向SecRandom发送JSON数据的实现方法
- 新增 **ClassIsland数据源切换功能**，在**时间设置**中添加开关以选择使用CSES或ClassIsland数据判断课间时间
- 新增 **ClassIsland状态处理机制**，实现对ClassIsland传入数据的解析和课间状态的动态更新
- 新增 **通知服务选择功能**，在**点名**、**闪抽**和**抽奖**通知设置中增加下拉框选择**SecRandom**或**ClassIsland**通知服务
- 新增 **通知显示时长设置**，在**点名**、**闪抽**和**抽奖**通知设置中增加微调框设置通知显示时长（1-60秒）
- 新增 **ClassIsland IPC通信**，实现与**ClassIsland**应用程序的**IPC**通信功能，能够发送通知数据
- 新增 **侧边栏浮窗管理功能**，在侧边栏管理设置中添加了浮窗管理位置选项

## 💡 功能优化

- 优化 **设置界面内存占用**，新增将完整加载占用从约 1.2GB 降至约 400MB
- 优化 **其他界面内存占用**，新增将总体内存控制在约 400MB 范围
- 优化 **密码安全加固**，将 TOTP/密码验证哈希算法升级为 SHA-512、PBKDF2-SHA512（100000 迭代）及 HMAC-SHA512，提高存储与生成安全性
- 优化 **更新器代码风格**，新增替换弃用标准库用法并提升可维护性
- 优化 **闪抽动画关闭提示**，新增在动画结束后同时显示“x秒后关闭”和“连续点击3下关闭”
- 优化 **配置查看窗口**，新增去除关闭按钮
- 优化 **语音重试机制**，针对不同错误类型设置差异化重试间隔，提升成功率
- 优化 **界面显示逻辑**，新增根据**验证配置**动态控制U盘验证组件的可见性
- 优化 **界面同步机制**，确保**设置更改**后界面正确反映实际配置状态
- 优化 **阈值设置文本**，将**主窗口显示阈值**改为**浮窗通知阈值**，并更新描述为"设置触发浮窗通知的人数/奖数阈值，超过此数值则不显示浮窗通知"，使用户更容易理解功能作用
- 优化 **通知窗口字体应用**，优化字体设置应用方式，将字体设置正确应用到标签组件而非布局对象
- 优化 **通知窗口字体同步**，优化通知窗口根据类型使用相应功能的字体设置，确保与主界面保持一致
- 优化 **预览功能**，**预览设置开关**默认为**开启状态**，用户可控制是否在验证过程中显示预览按钮
- 优化 **验证窗口显示逻辑**，**预览按钮**只在**打开设置**操作时显示，其他验证场景不显示预览按钮
- 优化 **安全操作组件状态管理**，为 **basic_safety_security_operations** 类添加 `_update_enabled_state` 方法，实现根据全局安全开关状态控制组件启用状态
- 优化 **信号转发机制**，修复URLHandler中ClassIsland数据信号转发问题，确保数据正确传递到UI界面
- 优化 **端口配置逻辑**，优先使用用户设置的端口值而非配置文件，实现端口变更时自动重启IPC服务器
- 优化 **默认端口设置**，将IPC端口默认值从0（动态分配）改为固定值11010，提高外部通信稳定性
- 优化 **设置管理**，添加class_island_source_enabled、current_class_island_break_status等新设置项及其默认值
- 优化 **课间禁用逻辑**，新增根据ClassIsland软件传入的课程表信息实时判断当前是否为课间时间的功能
- 优化 **CSES解析功能**，修改**非上课时间判断逻辑**，使用CSES解析器从CSES文件动态生成非上课时间段配置，替代原有的静态配置方式
- 优化 **时间设置模块**，新增从**data/CSES目录**读取YAML格式课程表文件功能，提升时间配置的灵活性和准确性
- 优化 **通知浮窗拖动条美观**，将拖动条宽度固定为80px，高度固定为5px，提升美观度
- 优化 **通知处理机制**，修改**FloatingNotificationManager**类根据用户设置动态选择**通知服务类型**
- 优化 **代码复用性**，通过**ResultDisplayUtils.show_notification_if_enabled**方法使所有通知功能支持新的**通知服务选择功能**
- 优化 **历史表格字体设置**，移除自定义字体加载和字体大小设置功能，使表格项使用软件默认字体显示
- 优化 **权重保存逻辑**，实现按顺序将权重值分配给对应奖品的功能
- 优化 **侧边栏管理语言配置**，为**sidebar_management_settings**和**sidebar_management_window**部分添加了"重启生效"提示文本
- 优化 **“平均值保护”功能**，默认关闭以避免人数、历史记录等因素导致的异常抽取结果

## 🐛 修复问题

- 修复 **构建 deb 包**，新增修正文件名相关问题并提升打包稳定性
- 修复 **Changelog 镜像源文件名**，新增解决文件名异常问题
- 修复 **更新器**，新增修复临时脚本文件泄露、Windows 路径处理、竞态条件、根目录验证缺失等 10 项问题
- 修复 **无法导入CSES通用课表格式问题**，新增修复导入CSES文件时，文件内数据格式错误导致的解析异常问题
- 修复 **闪抽无法保存历史记录问题**，修复在闪抽模式下，无法保存历史记录的问题
- 修复 **语言播放速度范围错误**，修复在设置中调整播放速度时，导致的范围最大值错误问题
- 修复 **无法设置名单**，修复在设置中设置名单中某数据时，由于下拉框选项无法写入导致的设置班级错误问题
- 修复 **“图标”“箭头”收纳样式无法使用问题**，修复在设置中选择“图标”“箭头”收纳样式时，无法正常使用的问题
- 修复 **收纳浮窗拖拽**，限制**收纳浮窗只能在y轴移动**，**x轴位置固定**，不会因拖拽或超出屏幕而改变
- 修复 **Edge TTS语音生成**，优化NoAudioReceived错误处理
- 修复 **语音缓存系统**，新增WebSocketError异常处理增强连接稳定性
- 修复 **Edge TTS库版本**，升级到最新版本 7.2.7，解决无法生成语音的问题
- 修复 **Windows平台文件隐藏功能**，新增**返回值检查**和**错误码记录**功能
- 修复 **U盘绑定功能**，新增对**Windows API调用**的错误处理和异常捕获机制
- 修复 **ComboBox数据获取**，优化当`currentData()`返回None时从显示文本中提取**盘符信息**的后备方案
- 修复 **文件写入权限**，新增使用**临时文件**策略避免secrets.json写入时的权限拒绝问题
- 修复 **U盘验证布局**，优化仅在需要**U盘验证**时才显示相关控件（状态标签和刷新按钮）
- 修复 **安全验证流程**，新增验证通过后**刷新下拉框**显示状态的功能
- 修复 **预览设置开关稳定性**，解决**开关操作**可能导致**软件卡退**的问题，改进**UI状态**处理逻辑避免闪烁
- 修复 **页面创建错误**，解决 **VerifyPasswordWindow** 构造函数参数传递问题，通过工厂函数方式正确传递 **operation_type** 参数
- 修复 **安全设置组件缺失方法**，为 **basic_safety_security_operations** 类补充 `_update_enabled_state` 方法，解决属性不存在错误
- 修复 **AttributeError错误**，在safety_settings.py中添加_missing属性初始化，解决'_busy'属性不存在问题
- 修复 **IPC服务器重启问题**，修改MainWindow初始化方法传递url_handler实例，解决无法访问URLHandler实例错误
- 修复 **Python语法错误**，移除main.py中不必要global声明，解决变量使用前声明的语法问题
- 修复 **通知服务单一问题**，解决之前只能使用**SecRandom内置通知**的限制，新增**ClassIsland通知服务**，用户可根据需要选择不同的通知服务
- 修复 **连接失败处理**，实现**智能回退机制**，当**ClassIsland**不可用时自动回退到**SecRandom通知**确保功能可用性
- 修复 **奖品权重加载功能**，修改为只显示权重数值而不显示奖品名称
- 修复 **数据格式处理**，确保加载和保存时只处理权重数值部分
- 修复 **权重数据类型转换**，将整数转换改为浮点数转换以支持小数权重值

## 🔧 其它变更

- 去除 **即抽** 功能
- 优化 **英文翻译文本**，新增更新部分英文翻译内容，提升多语言体验一致性

---

💝 **感谢所有贡献者为 SecRandom 项目付出的努力！**
我们坚持 **便捷、迅速、公平、透明** 的理念，让校园及更多场景的点名、抽奖、决策更安心。欢迎大家试用 Alpha 版，并踊跃反馈问题与建议，一起打磨更好的 SecRandom!

<!--
在更新此CHANGELOG.md文件时，请遵循以下格式：
- 使用"新增/优化/修复" + "功能名称" + "更新内容"的格式
- 示例："新增 更新通知弹窗，新增"今日不再提醒"功能"
- 示例："优化 课间禁用功能，新增在点名、抽奖的"开始"按钮点击后显示禁用状态提示"
- 示例："修复 DPI缩放问题，新增修复界面字体大小异常和界面比例失调问题"
- 注意：保持文本内容简洁明了，避免冗余描述
- 注意：适当加粗部分内容，如功能名称、关键特性等，使用**加粗文本**格式
保持格式一致性，确保每个更新条目都遵循这一模式。
-->
